--- a/options.ini
+++ b/options.ini
@@ -1,8 +1,8 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=NewConfig
-Текущий мультиметр=Не выбран
+Текущая конфигурация=ИТН напряжение калибровка 0001 20120208 1500
+Текущий мультиметр=В7-78\1
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=1
