Исправлены ошибки, связанные с контролем выходного значения
git-svn-id: https://5-10/svn/Interpolator/trunk@7 79faec12-22fc-454d-949a-33e152f8a113

--- a/options.ini
+++ b/options.ini
@@ -1,9 +1,9 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=ИТН напряжение калибровка 0001 20120208 1500
-Текущий мультиметр=В7-78\1
-Режим коррекции=0
+Текущая конфигурация=ИТН фаза напряжение калибровка 0002 20120427 1102
+Текущий мультиметр=Случайные числа
+Режим коррекции=1
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=1
-Режим расстройки=0
+Режим расстройки=1
