--- a/options.ini
+++ b/options.ini
@@ -1,8 +1,8 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=ИТН фаза напряжение калибровка 0002 20120427 1102
-Текущий мультиметр=Случайные числа
+Текущая конфигурация=ИТН напряжение калибровка 0001 20120208 1500
+Текущий мультиметр=Не выбран
 Режим коррекции=1
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=1
