--- a/options.ini
+++ b/options.ini
@@ -1,9 +1,9 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=ИТН напряжение калибровка 0001 20120208 1500
-Текущий мультиметр=Не выбран
-Режим коррекции=1
+Текущая конфигурация=У5023М
+Текущий мультиметр=В7-78\1
+Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=1
-Режим расстройки=1
+Режим расстройки=0
