Добавлена возможность отключать учет выходного параметра при измерении. Добавлена возможность включить фильтрацию выходного параметра
git-svn-id: https://5-10/svn/Interpolator/trunk@11 79faec12-22fc-454d-949a-33e152f8a113

--- a/options.ini
+++ b/options.ini
@@ -1,7 +1,7 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=У5023М
+Текущая конфигурация=ИТН напряжение калибровка 0001 20120208 1500
 Текущий мультиметр=В7-78\1
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
