Проект перенесен в C++Builder XE3. Добавлен tstlan. Добавлена возможность подключать мультиметры с помощью разных USB-GPIB и изменять настройки подключения. mxsrclib version 1273
git-svn-id: https://5-10/svn/Interpolator/trunk@13 79faec12-22fc-454d-949a-33e152f8a113

--- a/options.ini
+++ b/options.ini
@@ -1,9 +1,10 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=У5023М
-Текущий мультиметр=Ч3-85\3R
+Текущая конфигурация=Calibrator_переменный_ток_1-10А_калибровка
+Текущий мультиметр=В7-78-1
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
-Автообновление графиков=1
+Автообновление графиков=0
 Режим расстройки=0
+
