--- a/multimeter_configurations/В7-78-1.ini
+++ b/multimeter_configurations/В7-78-1.ini
@@ -4,7 +4,7 @@ type=В7-78/1
 key_col_width=150
 count=7
 key1=Способ подключения
-value1=Prologix COM-GPIB
+value1=Prologix Ethernet-GPIB
 key2=GPIB индекс
 value2=0
 key3=GPIB адрес
@@ -12,7 +12,7 @@ value3=22
 key4=COM name
 value4=com4
 key5=IP адрес
-value5=192.168.0.217
+value5=192.168.1.18
 key6=Порт
 value6=1234
 key7=Время обновления, мс
