--- a/options.ini
+++ b/options.ini
@@ -1,8 +1,8 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=У5023М частота
-Текущий мультиметр=Ч3-85-3R
+Текущая конфигурация=Calibrator_постоянноый_ток_00001_3А_калибровка
+Текущий мультиметр=В7-78-1
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
