- Конфигурации устройств теперь можно брать из tstlan и использовать без переименования. Одному устройству теперь соответствует одна конфигурация. Раньше на каждую конфигурацию поверки была своя конфигурация устройства, что затрудняло замену конфигурации устройства. - Пути к файлам данных теперь относительные. - При закрытии программы, перезагрузке файла с данными, смене/создании/изменении/удалении конфигурации поверки пользователю сообщается о несохраненных данных и дается возможность их сохранить. - Устранены ошибки:   - При закрытии окна графика измерений текущей точки график не удалялся и продолжал обновляться.   - Если нет соединения, то при записи значения в tstlan выдается окно с ошибкой.   - При создании новой конфигурации поверки не удалялось имя к файлу с данными от предыдущей конфигурации поверки, что могло привести к перезаписи данных при нажатии кнопки "Сохранить".
git-svn-id: https://5-10/svn/Interpolator/trunk@16 79faec12-22fc-454d-949a-33e152f8a113

--- a/options.ini
+++ b/options.ini
@@ -1,7 +1,7 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=Calibrator_постоянноый_ток_00001_3А_калибровка
+Текущая конфигурация=Calibrator_переменное_напряжение_калибровка
 Текущий мультиметр=В7-78-1
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
