--- a/options3.ini
+++ b/options3.ini
@@ -2,7 +2,7 @@
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
 Текущая конфигурация=NewConfig
-Текущий мультиметр=Не выбран
+Текущий мультиметр=
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
