--- a/options6.ini
+++ b/options6.ini
@@ -2,7 +2,7 @@
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
 Текущая конфигурация=NewConfig
-Текущий мультиметр=Не выбран
+Текущий мультиметр=
 Режим коррекции=1
 Стиль движения=по вертикали, назад
 Автообновление графиков=0
