--- a/Digitalinterpolator/devices/У5023М.ini
+++ b/Digitalinterpolator/devices/У5023М.ini
@@ -1,12 +1,12 @@
 [device]
 enabled=0
-type=modbus usb hid
+type=mxnet
 key_col_width=150
-count=8
-key1=Имя устройства
-value1=
-key2=Номер канала
-value2=1
+count=4
+key1=IP
+value1=127.0.0.1
+key2=Порт
+value2=5005
 key3=Время обновления, мс
 value3=100
 form_width=280
