Исправлена ошибка: в одноканальном режиме исчезал значек приложения на панели задач
git-svn-id: https://5-10/svn/Interpolator/trunk@23 79faec12-22fc-454d-949a-33e152f8a113

--- a/Digitalinterpolator/options.ini
+++ b/Digitalinterpolator/options.ini
@@ -1,9 +1,9 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=Calibrator_переменное_напряжение_калибровка
+Текущая конфигурация=Calibrator_постоянноый_ток_00001_3А_калибровка
 Текущий мультиметр=В7-78-1
-Режим коррекции=0
+Режим коррекции=1
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
 Режим расстройки=0
