Добавлено сравнение значений двух файлов. Добавлен расчет статистических параметров
git-svn-id: https://5-10/svn/Interpolator/trunk@24 79faec12-22fc-454d-949a-33e152f8a113

--- a/Digitalinterpolator/multimeters/Agilent 3458A.ini
+++ b/Digitalinterpolator/multimeters/Agilent 3458A.ini
@@ -6,7 +6,7 @@ form_width=310
 form_height=400
 count=7
 key1=Способ подключения
-value1=Prologix COM-GPIB
+value1=Prologix Ethernet-GPIB
 key2=GPIB индекс
 value2=0
 key3=GPIB адрес
@@ -14,7 +14,7 @@ value3=22
 key4=COM name
 value4=com4
 key5=IP адрес
-value5=192.168.0.217
+value5=192.168.1.18
 key6=Порт
 value6=1234
 key7=Время обновления, мс
