--- a/Digitalinterpolator/options.ini
+++ b/Digitalinterpolator/options.ini
@@ -1,8 +1,8 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=Calibrator_постоянноый_ток_00001_3А_калибровка
-Текущий мультиметр=В7-78-1
+Текущая конфигурация=Calibrator_переменный_ток_01-1А_калибровка
+Текущий мультиметр=Agilent 3458A
 Режим коррекции=1
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
