Изменен вывод отладочных сообщений
git-svn-id: https://5-10/svn/Interpolator/trunk@25 79faec12-22fc-454d-949a-33e152f8a113

--- a/Digitalinterpolator/options.ini
+++ b/Digitalinterpolator/options.ini
@@ -1,9 +1,9 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=Calibrator_переменный_ток_01-1А_калибровка
-Текущий мультиметр=Agilent 3458A
-Режим коррекции=1
+Текущая конфигурация=Calibrator_постоянное_напряжение_калибровка
+Текущий мультиметр=Keithley 2015
+Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
 Режим расстройки=0
