--- a/Digitalinterpolator/options1.ini
+++ b/Digitalinterpolator/options1.ini
@@ -1,7 +1,7 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=NewConfig
+Текущая конфигурация=OLDCalibrator_постоянное_напряжение_калибровка
 Текущий мультиметр=
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
