В .gitignore добавлены лог-файлы

--- a/Digitalinterpolator/options.ini
+++ b/Digitalinterpolator/options.ini
@@ -1,8 +1,8 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=Calibrator_постоянное_напряжение_калибровка
-Текущий мультиметр=Keithley 2015
+Текущая конфигурация=У5023М частота
+Текущий мультиметр=
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
