Автоматическое сохранение после каждого измерения. Снятие показаний внутри выделенного диапазона точек. Специальные настройки для каждой точки

--- a/Digitalinterpolator/options.ini
+++ b/Digitalinterpolator/options.ini
@@ -1,10 +1,11 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=У5023М частота
-Текущий мультиметр=
+Текущая конфигурация=Calibrator_переменное_напряжение_калибровка
+Текущий мультиметр=Тестовый мультиметр
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
 Автообновление графиков=0
 Режим расстройки=0
+Автоматическое сохранение измерений=0
 
