Погасил варнинги в настройках проекта

--- a/Digitalinterpolator/options.ini
+++ b/Digitalinterpolator/options.ini
@@ -1,7 +1,7 @@
 [Опции]
 Автоматическое подключение/отключение устройства=0
 Автоматическое подключение/отключение мультиметра=0
-Текущая конфигурация=Calibrator_переменное_напряжение_калибровка
+Текущая конфигурация=У5023М частота
 Текущий мультиметр=Тестовый мультиметр
 Режим коррекции=0
 Стиль движения=по горизонтали, вниз
